# ExampleCode

./: LongetCommonSubsequence.cpp  websocket_async_server.cpp
CmakeExample2/: CMakeLists.txt
CmakeExample2/src/: Example.cpp  Example.h  Formula.cpp  Formula.h  main.cpp
CmakeExample2/tst/: CMakeLists.txt  Example-text.cpp  Example-text.h  Formula-test.cpp
Cpp/: 3sum.cpp  BFS.cpp  BoostExample.cpp  CustomAllocator.cpp  FirstUniqueCharacterInaString.cpp  Knapsack.cpp  LCS.cpp  LcsDynamicTable.cpp  LinkedListExample.cpp  LongestCommonSubsDynamic.cpp  LongestCommonSubsequence.cpp  LongetCommonSubsequence.cpp  MinNumberSwapAnagram2.cpp  Queue_Future.cpp  RTTI.cpp  RecorderDataInLogs.cpp  RecorderDataInLogs2.cpp  addTowNumbers.cpp  advanced_server.cpp  arbitrageOpportunity.cpp  asyncProcess.cpp  async_server.cpp  async_server2.cpp  async_server_2.cpp  binarySearch.cpp  capacityToShipPackages.cpp  cardiSort.cpp  circleGlfw.cpp  client.cpp  constructerCounterExample.cpp  conversionOperator.cpp  countProtifMonths.cpp  detect_cycle_directed_graph.cpp  faceDetection_opencv_cuda.cpp  findDuplicate.cpp  findMinReturnType.cpp  findSubstringInString.cpp  firstNonRepeatingChar.cpp  forSum2.cpp  forSum22.cpp  (+71 more)
Cpp/QtOpenCV/Editor/: editor.pro  main.cpp  mainwindow.cpp  mainwindow.h
Cpp/QtOpenCV/QtOpencvQml/: .qmlType.cpp.swp  QtOpencvQml.pro  main.cpp  main.qml  qmlType.cpp  qmlType.h
Cpp/QtOpenCV/Viewer/: .qmake.stash  viewer.pro
Cpp/QtOpenCV/staticTest/: main.cpp  my_math.cpp  my_math.h  staticTest.pro
Cpp/asioTcpServer/: CMakeLists.txt  server.cpp
Cpp/socketExample/: main.cpp  myclient.cpp  myclient.h  myserver.cpp  myserver.h  mytask.cpp  mytask.h  socketExample.pro  socketExample.uml
LinkTimeSubstitution/: CMakeLists.txt  Data.cpp  MockData.cpp  example.cpp  example_test.cpp
LinkTimeSubstitution/include/: Data.h  MockData.h
Py/: DrawCircle.py  FaceDetection.py  InteractWithBinance.py  binarySearch.py  cameraJetsonNanoGst.py  cameraJetsonNanoGst3.py  clientWebsocket.py  drawRect.py  drawSingleRect.py  ex.py  gradientDescent.py  gstExample.py  gstreamerPython.py  numberOfIslands.py  piCameraVideo.py  pythonGstreamer.py  regressinTf.py  regressionTf.py  runVideo.py
TwincatExample/TwinCAT Project7/: TwinCAT Project7.sln
TwincatExample/TwinCAT Project7/TwinCAT Project7/: TwinCAT Project7.tsproj  TwinCAT Project7.tsproj.bak
TwincatExample/TwinCAT Project7/TwinCAT Project7/Untitled1/: Module1.cpp  Module1.h  Module1Ads.h  Resource.h  TcPch.cpp  TcPch.h  Untitled1.rc  Untitled1.tmc  Untitled1.vcxproj  Untitled1.vcxproj.filters  Untitled1ClassFactory.cpp  Untitled1ClassFactory.h  Untitled1Ctrl.cpp  Untitled1Ctrl.h  Untitled1Driver.cpp  Untitled1Driver.h  Untitled1Interfaces.h  Untitled1Main.cpp  Untitled1Services.h  Untitled1W32.cpp  Untitled1W32.def  Untitled1W32.idl  Untitled1W32.rc
TwincatExample/TwinCAT Project7/TwinCAT Project7/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
TwincatExample/TwinCAT Project7/TwinCAT Project7/_Boot/TwinCAT RT (x64)/CurrentConfig/: Untitled1.tczip
TwincatExample/TwinCAT Project7/TwinCAT Project7/_Repository/C++ Module Vendor/Untitled1/0.0.0.1/TwinCAT RT (x64)/: Untitled1.tmx
TwincatExample/WpfApp2/: WpfApp2.sln
TwincatExample/WpfApp2/WpfApp2/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp2.csproj
TwincatExample/WpfApp2/WpfApp2/Properties/: AssemblyInfo.cs
VideoQMLJnano/: Admin.qml  Alarm.qml  AndroidDelegate.qml  AutoScroller.qml  DesignDelegate.qml  Local.qml  VideoQMLJnano.pro  Wifi.qml  admin.cpp  admin.h  alarm.cpp  alarm.h  helper.cpp  helper.h  local.cpp  local.h  main.cpp  main.qml  myclass.cpp  myclass.h  network.qml  networkManager.cpp  networkManager.h  qml.qrc  wifiConf.cpp  wifiConf.h
VideoQMLJnano/content/: Alarm.qml  DesignDelegate.qml
bash/: brihtPi.sh
chart2/: chart2.pro  main.cpp  main.qml
cmakeExample/: CMakeLists.txt
cmakeExample/app/: CMakeLists.txt  main.cpp
cmakeExample/lib/: CMakeLists.txt
cmakeExample/lib/include/lib/: lib.h
cmakeExample/lib/src/: lib.cpp
firebaseQtExample/: firebase.cpp  firebase.h  firebaseQtExample.pro  main.cpp
googleTest/: CMakeLists.txt  README.md  test.puml
googleTest/include/: dummy.hpp  foo.hpp  foo_if.hpp  mock_foo.hpp
googleTest/src/: dummy.cpp  example.cpp  foo.cpp
googleTest/test/: test_example.cpp
gtestExample/: example.cpp  exampleTest.cpp
multipleRecs/: main.cpp  main.qml
protoExamples/: client_socket_boost.cpp  client_socket_boost_json.cpp  client_socket_boost_size.cpp  client_socket_boost_size_json.cpp  example.cpp  example.proto  example_socket.cpp  socket_server.py  socket_server_json.py  test.cpp  test.proto
sharedCallbackExample/: exampleA.cpp  exampleA.h  exampleAInt.h  exampleB.cpp  exampleB.h  exampleBInt.h  main.cpp
speedometer/: main.cpp  main.qml  speedometer.pro
swipeImage/: main.qml
touch/: main.qml
touch/content/: ButtonPage.qml  ListPage.qml  ProgressBarPage.qml  SliderPage.qml  TabBarPage.qml  TextInputPage.qml
